@@ -1,3 +1,14 @@
+Sat Jan 24 14:33:32 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
+
+	* riscos_c.c(switonum): Return -1 on error.
+	(ThrowbackSendError): Rename error into errstr avoiding a compiler
+	warning.
+	* help_cop.c,m_cpumem.c,lit.c: Pass Value parameter by const reference,
+	not by copy.
+	* put.c,code.c,code.h,error.c,error.h,area.c,value.c,area.h,value.h,
+	input.c,reloc.c,reloc.h,asm.c,main.c,lit.c,lex.c,lit.h,lex.h: Minor
+	source cleanups.
+
 Thu Jan 22 03:34:31 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
 
 	* fix.c(fixInt): Upper limit for 1 or 2 byte sized words was one off.
